--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
   "license": "MIT",
   "dependencies": {
     "@electron/remote": "^2.0.10",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "axios": "^1.5.0",
     "discord-rpc": "^4.0.1",
+    "electron-log": "^4.4.8",
     "electron-store": "^8.1.0",
     "express": "^4.18.2",
     "hotkeys-js": "^3.12.0",
